--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,4 @@
-<div class="order-widget">
+<div id="order-widget">
   <div class="order">
     <h3>Order <%= @order.name %></h3>
     <p>
@@ -62,17 +62,8 @@
     Templates.updateSelection($(this));
   });
   
-  // both live event handlers make sure the events also work for ajax inserted elements later on
+  // live event handlers make sure the events also work for ajax inserted elements later on
   $("#selected-templates :checkbox").live("change", function() {
     Templates.updateSelection($(this));
   });
-
-  $(".template-item a.preview-link").live("click", function() {
-    // hacky, get the id of the template from the link-id
-    var template = $(this).attr('id').match(/\d+/)[0];
-  	Templates.preview(template);
-    return false;
-  });
-
-  $(window).bind('resize', function() { IFrame.resizeAll(); });
 <% end %>
