--- a/app/views/print_templates/_form.html.erb
+++ b/app/views/print_templates/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_remote_for(tmpl, :method => method, :html => {:id => "print_template_form"}, :loading => "Status.show()", :complete => "Status.hide()") do |f| %>
+<% form_remote_for(tmpl, :method => method, :html => {:id => "print-template-form"}, :loading => "Status.show()") do |f| %>
   <div class="header">
     <%= f.label :name, "Name:" %>
     <%= f.text_field :name %>
@@ -10,18 +10,13 @@
     <p class="buttons">
       <%= submit_tag(method.to_sym == :post ? "Create" : "Update" )%>
       or
-      <% if method.to_sym == :post %>
-        <%= link_to_function "Cancel", "Dialog.close();", :class => 'action' %>
-      <% else %>
-        <%= link_to_function "Cancel", "Templates.preview(#{tmpl.id});", :class => 'action' %>      
-      <% end %>
+      <%= link_to_function "Cancel", "Dialog.close();", :class => 'action' %>
     </p>
   </div>
 <% end %>
 
 <% if method.to_sym == :post %>
   <% content_for :javascript do %>
-    // select the first input field when creating a new template
     $(":text:visible:enabled:first").focus().select();
   <% end %>
 <% end %>
