Removed overly complicated liquid render assert method in test_helper. Fixed tests. Made Shop in shopify_api its own ActiveResource so that it can be extended in shopify_api_liquid.

--- a/db/printing/package_slip.liquid
+++ b/db/printing/package_slip.liquid
@@ -1,8 +1,20 @@
+<h2>From</h2>
+<div>
+  <strong>{{ shop.name }}</strong></br>
+  {{ shop.owner }}</br>
+  {{ shop.address }}</br>
+  {{ shop.zip }} {{ shop.city }}
+  {% if shop.province %}, {{ shop.province }} {% endif %}
+  <br/>
+  {% if shop.country != shipping_address.country %} {{ shop.country }} {% endif %}<br/>
+</div>
+
+
 <div style="padding: 8px; border: 2px solid #ccc;">
   {{ shipping_address.name }}<br/>
   {{ shipping_address.company }}<br/>
   {{ shipping_address.street }}<br/>
   {{ shipping_address.city }}<br/>
   {{ shipping_address.zip }}<br/>
-  {{ shipping_address.country }}<br/>
+  {% if shop.country != shipping_address.country %} {{ shipping_address.country }} {% endif %}<br/>
 </div>
