--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -51,8 +51,13 @@ code { font-size: 140%; }
 	margin: 0px;;
 }
 
+#modal-dialog {
+	position: relative;
+}
+
 #print-template-form textarea {
 	width: 100%;
+	margin-bottom: 200px;
 }
 
 #print-template-form .default * {
