--- a/app/views/orders/_preview.html.erb
+++ b/app/views/orders/_preview.html.erb
@@ -3,11 +3,11 @@
   <!-- new preview -->
   <div class="preview-top" >
     <div class="template-actions">
-      <img src="images/button-edit.png" width="56" height="42" alt="Button Edit" class="aesthetic-clip"/>
-      <p class="template-name" ><%= tmpl.name %></p>
-      <p>
-        <%= link_to_remote "Edit", :url => {:controller => 'print_templates', :action => 'edit', :id => tmpl.id}, :method => 'get' %> | 
-        <%= link_to_remote "X", :url => tmpl, :method => :delete, :confirm => "Are you sure you want to delete template \"#{tmpl.name}\"?", :loading => "Status.show();", :complete => "Status.hide();" %>
+     
+      <p class="template-name"><%= tmpl.name %> &nbsp;</p>
+      <p> <%= image_tag "button-edit.png", :alt => "Button Edit", :class => "aesthetic-clip" %>
+        <%= link_to_remote "Edit template", :url => {:controller => 'print_templates', :action => 'edit', :id => tmpl.id}, :method => 'get' %> | 
+        <%= link_to_remote image_tag("trash.gif"), :url => tmpl, :method => :delete, :confirm => "Are you sure you want to delete template \"#{tmpl.name}\"?", :loading => "Status.show();", :complete => "Status.hide();" %>
       </p>
     </div>
   </div>
