Added Context library for tests. Added more tests (for RJS updates), and fixed some minor stuff.

--- a/app/views/print_templates/_form.html.erb
+++ b/app/views/print_templates/_form.html.erb
@@ -7,7 +7,7 @@
  <%= f.text_area :body, :id => 'template-editor', :rows => 15 %>
 
 
-  <%= render :partial => 'editor_help' %>
+  <%= render :partial => 'print_templates/editor_help' %>
   
   <div class="button-panel">
     <p class="buttons">
