--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -23,9 +23,9 @@
   </div>
 
   <div class="sidebar-block "> <!-- print -->
-    <%= link_to_function image_tag("button-print.png"), "Templates.print()", :style => "margin: 10px 0 -10px 0" %>
+    <%= link_to_function image_tag("button-print.png"), "Templates.print()", :style => "margin: 10px 0 0px 0" %>
 	</div><!-- last sidebar block -->
-	<img src="../images/logo.png" width="229" height="176" alt="Logo" class="logo"  />
+	<img src="../images/logo.png" width="229" height="176" alt="Logo" class="logo" style="margin-top:-10px" />
 </div><!--sidebar-->
 
 <!-- This is populated later via AJAX and popped up with the dialog function of JQueryUI -->
