--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,10 @@
-/* css was done by mark */
+/* css was done by mark and dennis */
 /* ============ */
 /* = Swatches = */
 /* ============ */
 /*
 text #4d441c (brown)
+text #a69b68 (light brown)
 text #da6391 (pink)
 href #265d8b (blue)
 */
@@ -34,13 +35,14 @@ body{background:url('../images/body-bg-wood.jpg');font-family:'Trebuchet MS','Ar
 /* ============== */
 /* = Typography = */
 /* ============== */
-#sidebar h1 {color:#4d441c; font-size:20px; text-transform:uppercase;}
-#sidebar h2 {color:#cd317a; font-size:18px;}
+#sidebar h1 {color:#4d441c; font-size:20px; text-transform:uppercase; margin:10px 0 0px 0;}
+#sidebar h2 {color:#cd317a; font-size:18px; margin:0px;}
 #sidebar p,#sidebar li {color:#4d441c; font-size:14px;}
-#sidebar .order-price {font-weight:bold; letter-spacing:-1px; font-size:15px;}
+#sidebar p {margin-top:3px;;}
+#sidebar .order-price {font-weight:bold; letter-spacing:-1px; font-size:15px; margin:0 0 8px 0; }
 #sidebar .order-price .paid {color:#15ae17; font-weight:bold;}
 #sidebar .order-price .unpaid  {color:#d90e0e; font-weight:bold;}
-#sidebar .customer-name {color:#a69b68;font-size:12px; margin:-3px 0 0 0;}
+#sidebar .customer-name {color:#a69b68;font-size:12px; margin:0px 0 2px 0;}
 
 #preview .template-actions {float:right; background:#fdf4bd; position:relative; margin:10px 77px 0 0; padding:13px 9px 9px 9px}
 #preview .template-actions img.aesthetic-clip { position:absolute;  right:50%}
@@ -56,10 +58,8 @@ body{background:url('../images/body-bg-wood.jpg');font-family:'Trebuchet MS','Ar
 /* ========= */
 .preview-top ul {float:right; margin:-10px 60px 0 0; }
 .preview-top ul li {float:left; list-style-type:none; }
-.preview-top ul li.edit {background:  url('../images/button-edit.png') no-repeat; width:56px;height:42px;text-indent:-9999px; margin-right:-10px;}
-.preview-top ul li.delete {background:  url('../images/button-delete.png') no-repeat; width:68px;height:42px; text-indent:-9999px;}
 
-#sidebar ul.list-templates {padding:3px 0 0 0;}
+#sidebar ul.list-templates {padding:3px 0 0 0; margin:0;}
 #sidebar ul.list-templates li {color:#da6391; list-style-type:none; margin:1px 0 0 0;}
 #sidebar ul.list-templates li input {margin:0px 5px 0 0; }
 
@@ -73,121 +73,3 @@ a:hover, a:focus, a:active {color:#265d8b;}
 #sidebar .new-template a {background: url('../images/button-newtemplate.png') no-repeat 30px 1px ;color:#FFF; position:relative; left:-5px; width:180px; padding:3px 0 6px 52px; font-size:11px;  text-transform:uppercase; font-weight:bold; display:inline-block; text-decoration:none;}
 #sidebar .new-template a:hover {color:#f2b1d6;}
 
-/* ======== */
-/*  Dennis  */
-/* ======== */
-
-#modal-dialog {
-
-}
-
-#print-template-form textarea {
-	width: 100%;
-
-}
-
-#print-template-form .default * {
-	vertical-align: top;
-}
-
-
-#template-editor {
-	font-family: "Courier New", "Courier", "monospace";
-
-}
-
-
-/* Flash errors and notices */
-
-#flash-errors li {
-  padding-left: 24px;
-  background: url('../images/admin/icons/warning.gif') center left no-repeat;
-}
-
-#flashnotice, #flasherrors {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  list-style-type: none;
-  text-align: center;
-  background: #000;
-  padding: 10px;
-  font-size: 100%;
-  color: #fff;
-  z-index: 9999; 
-}
-
-#flashnotice {
-  background: #172830 url('../images/bubbles.gif') top left no-repeat;
-  border-top: 3px solid #000;
-  color: #fff;
-  vertical-align: center;
-}
-
-#flasherrors {
-  background: #8A1111 url('../images/bubbles_error.gif') top left no-repeat;
-  border-top: 3px solid #000;  
-  color: #fff;
-}
-
-
-/* Growl-like notice in top right corner */
-#notice-item-wrapper {
-	position: fixed;
-	top: 20px;
-	right: 20px;
-	width: 250px;
-	z-index: 9999;
-}
-
-* html #notice-item-wrapper {
-	position: absolute;		
-}
- 
-#notice-item {
-	height: 50px;
-	background: #333;
-	-moz-border-radius: 6px;
-	-webkit-border-radius: 6px;
-	color: #eee;
-	padding: 6px 6px 0 6px;
-	font-family: lucida Grande;
-	font-size: 11px;
-	border: 2px solid #999;
-	display: block;
-	position: relative;
-	margin: 0 0 12px 0;
-	text-align: center;
-}
-
-#notice-item p {
-	margin: 4px;
-}
-
-#progressbar {
-	height: 12px;
-}
-
-/* animated background for jquery progressbar */
-.ui-progressbar-value { 
-	background-image: url('/images/pbar-ani.gif') !important;
-}
-
-/* Template editing form */
-.button-panel {
-	width: 100%;
-	text-align: center;
-}
-
-.buttons {
-	background-color: #eee;
-	border: 1px solid #ccc;
-	text-align: center;
-	padding: 12px 16px;
-	margin: 16px;
-}
-
-.buttons a {
-	color: #c00 !important;
-}
