--- a/app/views/print_templates/_editor_help.html.erb
+++ b/app/views/print_templates/_editor_help.html.erb
@@ -1,6 +1,6 @@
 <div class="help">
   <h3>Help</h3>
-  Use HTML, CSS and Liquid to customize your templates.
+  <p>Use HTML, CSS and Liquid to customize your templates.</p>
   <ul>
     <li><%= link_to "Basics of the Liquid template language", "http://wiki.shopify.com/Liquid", :class => "action", :target => "wiki" %></li>
     <li><%= link_to "Liquid variables you can use", "http://wiki.shopify.com/Order", :class => "action", :target => "wiki" %></li>
