--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,7 +29,7 @@ body{background:url('../images/body-bg-wood.jpg');font-family:'Trebuchet MS','Ar
 #preview {padding-bottom:70px; clear:both;zoom:1;}
 #preview .preview-top{background:url('../images/paper-top.png')  no-repeat  ; float:right; height:70px;width:712px; margin:45px 0 0 0;}
 #preview .preview-wrapper {background:url('../images/paper-middle.png') ;width:711px; float:right;}
-#preview .preview-content { margin:-40px 0 0 0; padding:50px 40px 0 40px; clear:both;}
+#preview .preview-content { margin:-40px 0 0 0; padding:40px 40px 0 40px; clear:both;}
 #preview  .preview-bottom {background:url('../images/paper-bottom.png') no-repeat; width:712px; height:70px; margin-bottom:0px; float:right;} 
 
 /* ============== */
@@ -44,10 +44,13 @@ body{background:url('../images/body-bg-wood.jpg');font-family:'Trebuchet MS','Ar
 #sidebar .order-price .unpaid  {color:#d90e0e; font-weight:bold;}
 #sidebar .customer-name {color:#a69b68;font-size:12px; margin:0px 0 2px 0;}
 
-#preview .template-actions {float:right; background:#fdf4bd; position:relative; margin:10px 77px 0 0; padding:13px 9px 9px 9px}
-#preview .template-actions img.aesthetic-clip { position:absolute;  right:50%}
-#preview .template-actions p {margin:0; padding:0; line-height:15px;float:left; padding-top:7px;font-size:14px;}
-#preview .template-actions .template-name {color:#cd317a; float:left;}
+#preview .template-actions {float:right; background:transparent url('../images/sticky-template-bg.png') repeat-x; position:relative; margin:12px 77px 0 0; height:50px; }
+#preview .template-actions img.aesthetic-clip { position:absolute;  right:30%; top:-24px;}
+#preview .template-actions p {margin:0; padding:0; line-height:15px;float:left; padding-top:7px;font-size:14px;  }
+#preview .template-actions .template-name {color:#cd317a; float:left;  background:url('../images/sticky-template-left.png') no-repeat left; padding: 17px 0 11px 20px; margin:2px 0 0 -4px;}  
+#preview .template-actions .template-options  {background:url('../images/sticky-template-right.png') no-repeat right;padding:17px 20px 12px 0; margin:1px -4px 0 0; }    
+#preview .template-actions .template-options a {font-size:12px;} 
+#preview .template-actions .template-options a img {vertical-align:middle;}
 
 /* ============== */
 /* = Form Elements = */
@@ -73,3 +76,138 @@ a:hover, a:focus, a:active {color:#265d8b;}
 #sidebar .new-template a {background: url('../images/button-newtemplate.png') no-repeat 30px 1px ;color:#FFF; position:relative; left:-5px; width:180px; padding:3px 0 6px 52px; font-size:11px;  text-transform:uppercase; font-weight:bold; display:inline-block; text-decoration:none;}
 #sidebar .new-template a:hover {color:#f2b1d6;}
 
+#sidebar a {margin:0; padding:0;}
+
+/* ============== */
+/* = Login Page = */
+/* ============== */
+#login {background:  url('../images/sidebar-top-ribbon.png') repeat-x ; padding-top:7px; width:220px; margin:30px auto; text-align:center; }
+#login-wrapper { background:#fff9d3; padding-top:10px;  }
+#login h1 {margin:0px 0 10px 0;color:#4d441c; font-size:25px; }
+#login p {margin:0 0 5px 0; font-size:15px;text-align:center; ;color:#4d441c; font-weight:lighter; padding-bottom:5px;}
+    
+#login p strong   {font-size:12px;margin-left:3px;}
+#login p.low-em {font-size:13px; font-style:italic;color:#a69b68;}   
+#login .sidebar-block {padding:15px 12px 0 12px;}
+/* ======== */
+/*  Lightbox  */
+/* ======== */
+
+#modal-dialog {}
+
+#print-template-form textarea {	width: 100%; overflow:visible;}
+
+#print-template-form .default * {
+	vertical-align: top;
+}
+
+
+/* Flash errors and notices */
+e
+#flash-errors li {
+  padding-left: 24px;
+  background: url('../images/admin/icons/warning.gif') center left no-repeat;
+}
+
+#flashnotice, #flasherrors {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  list-style-type: none;
+  text-align: center;
+  background: #000;
+  padding: 10px;
+  font-size: 100%;
+  color: #fff;
+  z-index: 9999; 
+}
+
+#flashnotice {
+  background: #172830 url('../images/bubbles.gif') top left no-repeat;
+  border-top: 3px solid #000;
+  color: #fff;
+  vertical-align: center;
+}
+
+#flasherrors {
+  background: #8A1111 url('../images/bubbles_error.gif') top left no-repeat;
+  border-top: 3px solid #000;  
+  color: #fff;
+}
+
+
+/* Growl-like notice in top right corner */
+#notice-item-wrapper {
+	position: fixed;
+	top: 20px;
+	right: 20px;
+	width: 250px;
+	z-index: 9999;
+}
+
+* html #notice-item-wrapper {
+	position: absolute;		
+}
+ 
+#notice-item {
+	height: 50px;
+	background: #333;
+	-moz-border-radius: 0px;
+	-webkit-border-radius: 0px;
+	color: #eee;
+	padding: 6px 6px 0 6px;
+	font-family: lucida Grande;
+	font-size: 11px;
+	border: 2px solid #999;
+	display: block;
+	position: relative;
+	margin: 0 0 12px 0;
+	text-align: center;
+}
+
+#notice-item p {
+	margin: 4px;
+}
+
+#progressbar {
+	height: 12px;
+}
+
+/* animated background for jquery progressbar */
+.ui-progressbar-value { 
+	background-image: url('/images/pbar-ani.gif') !important;
+}
+
+/* Template editing form */
+.button-panel {
+	width: 100%;
+	text-align: center;
+}
+
+.buttons {
+	background-color: #eee;
+	border: 1px solid #ccc;
+	text-align: center;
+	padding: 12px 16px;
+	margin: 16px;
+}
+
+.buttons a {
+	color: #c00 !important;
+}
+
+/* =========================== */
+/* = Stuff mark edited/added for the lightbox = */
+/* =========================== */
+.button-panel {background:#fff9d4; border:1px solid #cdc69f; margin-top:10px;}
+p.buttons {background:none; border:none; margin:0;}
+.ui-widget  #template-editor {font-family: "Courier New", "Courier", "monospace"; font-size:14px; margin:auto; margin-top:6px;}  
+.ui-widget  #print_template_name   {font-size:14px;}
+.ui-widget-content .header {color:#cd317a; font-family:'Trebuchet MS'; margin-top:10px;}
+.ui-widget-content .template-code label {color:#cd317a; font-family:'Trebuchet MS'; margin-top:11px; display:block; }
+
+.help h3 {padding:10px 0 0 0; font-size:15px; margin:0;}
+.help ul {padding-top:0; margin-top:0; padding-left:20px;}
+.help p {margin:2px 0 3px 0; font-size:13px;}
+.help {padding-bottom:20px; padding-top:5px;}
