Changed template list from having a classs to having a unique ID (for javascript insertion with rails rjs helpers).

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -12,7 +12,7 @@
       <em class="note">No templates found, you should create a new one.</em>
     <% else %>
       <% form_tag({:action => 'print'}, :id => "selected-templates") do %>
-      <ul class="list-templates">
+      <ul id="list-templates">
         <% @tmpls.each do |tmpl| %>
           <%= render :partial => 'template_checkbox', :locals => {:tmpl => tmpl, :order => @order} %>
         <% end %>
