--- a/app/views/print_templates/_editor_help.html.erb
+++ b/app/views/print_templates/_editor_help.html.erb
@@ -1,7 +1,8 @@
 <div class="help">
-  <h3>Help</h3>
-  <p>Use HTML, CSS and Liquid to customize your templates.</p>
-  <ul>
+  <%= link_to_function "Help", "$('#editor-help-links').slideToggle('fast');" %>
+  <ul id="editor-help-links" style="display: none">
+    <p>Use HTML, CSS and Liquid to customize your templates.</p>
+    
     <li><%= link_to "Basics of the Liquid template language", "http://wiki.shopify.com/Liquid", :class => "action", :target => "wiki" %></li>
     <li><%= link_to "Liquid variables you can use", "http://wiki.shopify.com/Order", :class => "action", :target => "wiki" %></li>
     <li><%= link_to "HTML and CSS", "http://htmldog.com", :class => "action", :target => "web" %></li>
